--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,7 @@
         "php": ">=8.1",
         "ext-ctype": "*",
         "ext-iconv": "*",
-        "doctrine/annotations": "^1.0|^2.0",
+        "doctrine/annotations": "^2.0",
         "doctrine/doctrine-bundle": "^2.0",
         "doctrine/doctrine-migrations-bundle": "^3.0",
         "doctrine/orm": "^2.0",
@@ -94,7 +94,7 @@
                     "symfony/flex": "^2.0",
                     "symfony/framework-bundle": "^7.0",
                     "symfony/process": "^7.0",
-                    "symfony/twig-bundle": "^5.0"
+                    "symfony/twig-bundle": "^7.0"
                 }
             }
         },
