--- a/.env
+++ b/.env
@@ -30,7 +30,7 @@ DATABASE_URL="postgresql://app:!ChangeMe!@127.0.0.1:5432/app?serverVersion=16&ch
 ###< doctrine/doctrine-bundle ###
 
 ###> symfony/mailer ###
-MAILER_DSN="sendmail+smtp://default"
+# MAILER_DSN=null://null
 ###< symfony/mailer ###
 
 ###> rapsys/airbundle ###
