--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,7 @@
         "doctrine/doctrine-bundle": "^2.0",
         "doctrine/doctrine-migrations-bundle": "^3.0",
         "doctrine/orm": "^2.0",
-        "erusev/parsedown": "^2.0",
+        "erusev/parsedown": "^1.0|^2.0",
         "rapsys/airbundle": "dev-master",
         "rapsys/packbundle": "dev-master",
         "rapsys/userbundle": "dev-master",
@@ -206,8 +206,12 @@
         ],
         "symfony": {
             "allow-contrib": true,
-            "require": "^7.0",
-            "docker": false
+            "docker": false,
+            "endpoint": [
+				"https://git.rapsys.eu/recipes/blob_plain/HEAD:/index.json",
+				"flex://defaults"
+			],
+            "require": "^7.0"
         },
         "symfony-assets-install": "relative"
     }
