--- a/config/packages/monolog.yaml
+++ b/config/packages/monolog.yaml
@@ -7,8 +7,9 @@ when@dev:
         handlers:
             main:
                 type: stream
-                path: "%kernel.logs_dir%/%kernel.environment%.log"
+                path: php://stderr
                 level: debug
+                formatter: monolog.formatter.line
                 channels: ["!event"]
             # uncomment to get logging in your browser
             # you may have to allow bigger header sizes in your Web server configuration
@@ -50,7 +51,7 @@ when@prod:
                 type: stream
                 path: php://stderr
                 level: debug
-                formatter: monolog.formatter.json
+                formatter: monolog.formatter.line
             console:
                 type: console
                 process_psr_3_messages: false
@@ -59,4 +60,4 @@ when@prod:
                 type: stream
                 channels: [deprecation]
                 path: php://stderr
-                formatter: monolog.formatter.json
+                formatter: monolog.formatter.line
